commit to git page

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -7,11 +7,15 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
-    - text: "License"
-      href: license.html
+    - text: "DataIntegration"
+      href: DataIntegration.html
+    - text: "Clustering"
+      href: DimensionReduction_Clustering.html
+    - text: "Contrasts"
+      href: Contrasts.html
   right:
     - icon: fa-github
-      href: https://github.com/jdblischak/workflowr
+      href: https://github.com/yasinkaymaz/Harvard-RosenbrockLab.git
 output:
   workflowr::wflow_html:
     toc: true
