--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -15,6 +15,8 @@ navbar:
       href: Gene-Level-Contrasts.html
     - text: "Isoform-Level-Contrasts"
       href: Isoform-Level-Contrasts.html
+    - text: "Flip-Flop-Isoforms"
+      href: Flip-Flop-Isoforms.html
   right:
     - icon: fa-github
       href: https://github.com/yasinkaymaz/Harvard-RosenbrockLab.git
